--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Noto+Sans+JP:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>React Redux App</title>
   </head>
   <body>
