:sparkles: ランキングの作成・グラフの拡張

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="アメーバ経営の時間当たり採算を計算・管理できるアプリ"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Noto+Sans+JP:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>React Redux App</title>
+    <title>時間当たり採算アプリ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
